--- a/html/login.html
+++ b/html/login.html
@@ -23,7 +23,7 @@
         <form>
             <input type="text" placeholder="请输入手机号或者邮箱" maxlength="11">
             <input type="password" placeholder="请输入登录密码" >
-            <input type="button" value="登录">
+            <button type="button">登录</button>
         </form>
         <p>还没账号？立即注册</p>
     </div>
